# nextflow_telemetry

./: .env.prod  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  env  firebase.json  init.sql  justfile  pyproject.toml  telemetry.json
.claude/: settings.json
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.playwright-mcp/: page-2026-04-30T20-48-28-142Z.yml  page-2026-04-30T20-48-42-437Z.yml  page-2026-04-30T20-48-49-169Z.yml  page-2026-04-30T20-48-55-724Z.yml  page-2026-04-30T20-49-03-187Z.yml  page-2026-05-01T02-56-23-990Z.yml  page-2026-05-01T02-56-33-214Z.yml  page-2026-05-01T02-56-42-928Z.yml  page-2026-05-01T03-05-02-275Z.yml  page-2026-05-01T03-14-52-015Z.yml  page-2026-05-01T03-16-00-395Z.yml  page-2026-05-01T13-07-02-171Z.yml  page-2026-05-04T22-51-16-140Z.yml  page-2026-05-04T22-51-40-542Z.yml  page-2026-05-04T22-54-04-213Z.yml  page-2026-05-04T23-45-35-438Z.yml  page-2026-05-04T23-45-45-920Z.yml  page-2026-05-04T23-46-20-855Z.yml  page-2026-05-04T23-52-55-348Z.yml  page-2026-05-04T23-53-07-752Z.yml  page-2026-05-05T17-18-07-810Z.yml  page-2026-05-05T17-18-29-095Z.yml
config/: client-alpine.yaml.example  client-anvil.yaml.example
deploy/: .firebaserc  DEPLOY.md  cloudrun.yaml  firebase.json
docs/: adding-studies.md  data-access.md  hpc-deployment.md  orchestrator-architecture.md  output-catalog-etl-design.md  output-catalog-etl-plan.md  publish-and-catalog-design.md  roadmap.md  sample-metadata-design.md  storage-layout.md  study-sample-version-identity.md  temporal-design-seed.md
frontend/: README_FOR_CLAUDE.md  index.html  package-lock.json  package.json
meetings/: 2026-02-23-cfde-team.md
nextflow_telemetry/: config.py  main.py  models.py
nf_testing/: main.nf  nextflow.config
people/: ethan-lange.md  suki-singh.md  vikram-adithya-ganesh.md
scripts/: cleanup_orphan_samples.py  format_study_preview.py  load_bioproject.py  migrate.py  seed_collection_from_cohort.py  seed_collection_from_study_tsv.py  seed_from_tsv.py  seed_studies_from_cmd.py  seed_test_jobs.py  ui_eval_capture.py
templates/: submit_alpine.sh.j2  submit_anvil.sh.j2  submit_example.sh.j2
tests/: conftest.py  test_access_log.py  test_add_study_workflow.py  test_api.py  test_auth.py  test_cohorts_router.py  test_curated.py  test_dispatch_service.py  test_e2e.py  test_etl_parsers.py  test_integration.py  test_jobs_router.py  test_lifecycle.py  test_pipelines_router.py  test_process_metrics_router.py  test_process_metrics_service.py  test_runs_router.py  test_samples_router.py  (+3 more)
(+283 files in other folders)
