[tool.poetry]
name = "nextflow_telemetry"
version = "0.1.0"
description = "Web api for accepting nextflow callbacks"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
SQLAlchemy = {extras = ["asyncpg"], version = "^1.4.43"}
alembic = "^1.8.1"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
orjson = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
