[project]
name = "nextflow-telemetry"
version = "0.1.0"
description = "Web api for accepting nextflow callbacks"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Sean Davis", email = "seandavi@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.86.0,<0.87.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.8.1,<2.0.0",
    "orjson>=3.8.1,<4.0.0",
    "anyio>=3.6.2,<4.0.0",
    "uvicorn>=0.27.0.post1,<0.28.0",
    "asyncpg>=0.29.0,<1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=0.982,<1.0.0",
    "nf-core>=2.6,<3.0.0",
    "pytest>=8.3.4,<9.0.0",
    "httpx>=0.27.2,<0.28.0",
    "sqlglot>=25.20.2,<26.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nextflow_telemetry*"]
