[project]
name = "nextflow-telemetry"
version = "0.1.0"
description = "Web api for accepting nextflow callbacks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sean Davis", email = "seandavi@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "orjson>=3.10.0,<4.0.0",
    "uvicorn>=0.30.0,<0.31.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "uuid7>=0.1.0",   # installs as uuid_extensions; provides uuid7() on Python < 3.13
]

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<0.28.0",
    "testcontainers[postgres]>=4.8.0,<5.0.0",
    "greenlet>=3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nextflow_telemetry*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
